tests/m21convtest.ipynb: Adapt to the current version of pytakt.

--- a/takt/tests/m21convtest.ipynb
+++ b/takt/tests/m21convtest.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(readsmf('menuet.mid') & ps.keysig('G-major')).music21().show()"
+    "(readsmf('menuet.mid') & sc.keysig('G-major')).music21().show()"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mml('$timesig(4,4) dr=100 cdef tk=3 $keysig(1,tk=3) [gh]ah^c $keysig(-3) tk=1 cdef').Render().music21().show()"
+    "mml('$timesig(4,4) dr=100 cdef tk=3 $keysig(1,tk=3) [gb]ab^c $keysig(-3) tk=1 cdef').Render().music21().show()"
    ]
   },
   {
@@ -206,7 +206,7 @@
    },
    "outputs": [],
    "source": [
-    "mml('{cdefgahcdefga}/13 ^c').music21().show()"
+    "mml('{cdefgabcdefga}/13 ^c').music21().show()"
    ]
   },
   {
@@ -218,7 +218,7 @@
    },
    "outputs": [],
    "source": [
-    "mml('{cdefgahcdefgacdef}////17^c').music21().show()"
+    "mml('{cdefgabcdefgacdef}////17^c').music21().show()"
    ]
   },
   {
@@ -242,7 +242,7 @@
    },
    "outputs": [],
    "source": [
-    "(ps.timesig(2,4) + seq(ps.xml('text', f'dr={dr}')+mml('L4 c(dr=$(dr)) e') for dr in range(50, 140, 5))).Render().music21().show()"
+    "(sc.timesig(2,4) + seq(sc.xml('text', f'dr={dr}')+mml('L4 c(dr=$(dr)) e') for dr in range(50, 140, 5))).Render().music21().show()"
    ]
   },
   {
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mml('L16 f~r~ defh~fc~~d~~').music21().show()"
+    "mml('L16 f~r~ defb~fc~~d~~').music21().show()"
    ]
   },
   {
@@ -428,7 +428,7 @@
    },
    "outputs": [],
    "source": [
-    "ps.xml('chord', 'G69').music21().show()"
+    "sc.xml('chord', 'G69').music21().show()"
    ]
   },
   {
@@ -490,7 +490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "readsmf('tests/grieg.mid').Filter('tk in (1,2,15)').Clip(0, '3').music21(min_note=L32).show()\n",
+    "readsmf('grieg.mid').Filter('tk in (1,2,15)').Clip(0, '3').music21(min_note=L32).show()\n",
     "# tomusic21(readsmf('tests/grieg.mid').Filter('tk in (15,)').Clip(0, '2')).show()"
    ]
   },
@@ -517,7 +517,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -531,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
