--- a/pytakt/tests/chordtest.ipynb
+++ b/pytakt/tests/chordtest.ipynb
@@ -3,20 +3,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "18643e9f",
+   "id": "9563a776",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "import music21\n",
-    "from takt import *"
+    "from pytakt import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e497d799",
+   "id": "ca871e7a",
    "metadata": {
     "scrolled": true
    },
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7363263e",
+   "id": "cce30e46",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e1b0041d",
+   "id": "fea3f923",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f7c43fa4",
+   "id": "a2fad9b0",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "129e1eeb",
+   "id": "4f224a98",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4e74f3b8",
+   "id": "a02f376c",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ebb456aa",
+   "id": "1a94c01b",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "94935210",
+   "id": "8c66630e",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "94e2a155",
+   "id": "0691f2ff",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5c73aba8",
+   "id": "1471f28e",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "651c486c",
+   "id": "810e164e",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "da93f1f7",
+   "id": "9846ce06",
    "metadata": {
     "scrolled": true
    },
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cf2aaefc",
+   "id": "e1509262",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9aab35d2",
+   "id": "2819ca4c",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fcf2b51",
+   "id": "b695032d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ad82833",
+   "id": "63c74a8c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -344,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
