--- a/pytakt/tests/m21convtest.ipynb
+++ b/pytakt/tests/m21convtest.ipynb
@@ -3,20 +3,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "920fb068",
+   "id": "7b1b8c1d",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "from takt import *\n",
+    "from pytakt import *\n",
     "import music21"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8f3c97f",
+   "id": "73e887b7",
    "metadata": {
     "scrolled": true
    },
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8115b565",
+   "id": "23fc621c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05e4d70d",
+   "id": "a7c5cae3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "482d38ca",
+   "id": "e41bb614",
    "metadata": {
     "scrolled": true
    },
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72b6cd96",
+   "id": "65d3c95a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aed7286",
+   "id": "6a3647c1",
    "metadata": {
     "scrolled": true
    },
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "797b727e",
+   "id": "bc453044",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea10a453",
+   "id": "f4bb4648",
    "metadata": {
     "scrolled": true
    },
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ac92f00",
+   "id": "fccb8328",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73772aec",
+   "id": "120b4b57",
    "metadata": {
     "scrolled": true
    },
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f46cafd",
+   "id": "2290b091",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed7a2909",
+   "id": "20169c0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecabdd12",
+   "id": "6f89eb30",
    "metadata": {
     "scrolled": false
    },
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "849fdad5",
+   "id": "f954c6a6",
    "metadata": {
     "scrolled": false
    },
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9456d5f",
+   "id": "d1d34989",
    "metadata": {
     "scrolled": false
    },
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c51d02df",
+   "id": "08d3a315",
    "metadata": {
     "scrolled": true
    },
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "030b2e4c",
+   "id": "f76c33db",
    "metadata": {
     "scrolled": true
    },
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "407ad92f",
+   "id": "07bf8cb9",
    "metadata": {
     "scrolled": true
    },
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0abbe4a1",
+   "id": "894f3b5b",
    "metadata": {
     "scrolled": false
    },
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cec862d",
+   "id": "ef2afa42",
    "metadata": {
     "scrolled": true
    },
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a626c0ca",
+   "id": "a2f85d34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b63fe2cb",
+   "id": "972807fd",
    "metadata": {
     "scrolled": true
    },
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4f931fa",
+   "id": "a1c6b576",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "274ad3dd",
+   "id": "7a3a1fd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "690e988b",
+   "id": "60c39d50",
    "metadata": {
     "scrolled": true
    },
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d52a8cb2",
+   "id": "49ffba55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7db795f6",
+   "id": "10a25776",
    "metadata": {
     "scrolled": true
    },
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "214f89b4",
+   "id": "012dddc3",
    "metadata": {
     "scrolled": false
    },
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efb6a821",
+   "id": "df7d3c2c",
    "metadata": {
     "scrolled": false
    },
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cc3bb8b",
+   "id": "5e5dce11",
    "metadata": {
     "scrolled": false
    },
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdc6e615",
+   "id": "5ec72257",
    "metadata": {
     "scrolled": true
    },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "cbb7e9d0",
+   "id": "c75618a1",
    "metadata": {
     "scrolled": false
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "05ff0209",
+   "id": "24f75537",
    "metadata": {
     "scrolled": true
    },
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04802db3",
+   "id": "f439aae9",
    "metadata": {
     "scrolled": true
    },
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d2523af",
+   "id": "0ce152ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "554d9e4d",
+   "id": "d578b358",
    "metadata": {},
    "source": [
     "mml(\"$xmlinfo('text', 'sample') $tempo(150) cdef\").music21().write('musicxml', '/tmp/a.xml')"
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dc6ca77",
+   "id": "9fb8ce09",
    "metadata": {
     "scrolled": true
    },
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "145b2f90",
+   "id": "121f1b2d",
    "metadata": {
     "scrolled": false
    },
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f7d254a",
+   "id": "10337750",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5f69e99",
+   "id": "d6272385",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4c87651",
+   "id": "ec4b4aaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f17bf8ce",
+   "id": "93659664",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "46f8d226",
+   "id": "e9abd14b",
    "metadata": {},
    "source": [
     "readsmf('tests/scores/mozart.mid').Reject('n<F4').music21().show()"
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "44d85c1b",
+   "id": "f5c06b49",
    "metadata": {
     "scrolled": true
    },
@@ -517,7 +517,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -531,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
