--- a/pytakt/tests/m21convtest.ipynb
+++ b/pytakt/tests/m21convtest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b1b8c1d",
+   "id": "97320de5",
    "metadata": {
     "scrolled": true
    },
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73e887b7",
+   "id": "250218e1",
    "metadata": {
     "scrolled": true
    },
@@ -25,25 +25,25 @@
     "s = music21.stream.Stream()\n",
     "n = music21.note.Note('C4')\n",
     "s.append(n)\n",
-    "Score.frommusic21(s).music21().show()"
+    "Score.from_music21(s).music21().show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23fc621c",
+   "id": "ede92a57",
    "metadata": {},
    "outputs": [],
    "source": [
     "s = music21.corpus.parse('bwv66.6')\n",
     "# s.show()\n",
-    "Score.frommusic21(s).music21().show()"
+    "Score.from_music21(s).music21().show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7c5cae3",
+   "id": "a016baa2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e41bb614",
+   "id": "59f687d0",
    "metadata": {
     "scrolled": true
    },
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65d3c95a",
+   "id": "2c604266",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a3647c1",
+   "id": "6063617e",
    "metadata": {
     "scrolled": true
    },
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc453044",
+   "id": "e4563b9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4bb4648",
+   "id": "4a21d1a4",
    "metadata": {
     "scrolled": true
    },
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fccb8328",
+   "id": "8ef64868",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120b4b57",
+   "id": "cbade8b2",
    "metadata": {
     "scrolled": true
    },
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2290b091",
+   "id": "6ee0edc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20169c0c",
+   "id": "346c762f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f89eb30",
+   "id": "48dd33a8",
    "metadata": {
     "scrolled": false
    },
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f954c6a6",
+   "id": "b8fb0942",
    "metadata": {
     "scrolled": false
    },
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1d34989",
+   "id": "6fed266f",
    "metadata": {
     "scrolled": false
    },
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08d3a315",
+   "id": "062dfd5f",
    "metadata": {
     "scrolled": true
    },
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f76c33db",
+   "id": "c5f15d21",
    "metadata": {
     "scrolled": true
    },
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07bf8cb9",
+   "id": "3db66d97",
    "metadata": {
     "scrolled": true
    },
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "894f3b5b",
+   "id": "0c003544",
    "metadata": {
     "scrolled": false
    },
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef2afa42",
+   "id": "2969bf41",
    "metadata": {
     "scrolled": true
    },
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2f85d34",
+   "id": "11fd08bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "972807fd",
+   "id": "3917089b",
    "metadata": {
     "scrolled": true
    },
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1c6b576",
+   "id": "174119fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a3a1fd8",
+   "id": "2389fd59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60c39d50",
+   "id": "a08f1631",
    "metadata": {
     "scrolled": true
    },
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49ffba55",
+   "id": "75e42b4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10a25776",
+   "id": "92691b28",
    "metadata": {
     "scrolled": true
    },
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "012dddc3",
+   "id": "38f37f87",
    "metadata": {
     "scrolled": false
    },
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df7d3c2c",
+   "id": "1290e664",
    "metadata": {
     "scrolled": false
    },
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e5dce11",
+   "id": "49b6a6fa",
    "metadata": {
     "scrolled": false
    },
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ec72257",
+   "id": "d2c66813",
    "metadata": {
     "scrolled": true
    },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "c75618a1",
+   "id": "6c59bbe4",
    "metadata": {
     "scrolled": false
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "24f75537",
+   "id": "863b402e",
    "metadata": {
     "scrolled": true
    },
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f439aae9",
+   "id": "7f8a6e8c",
    "metadata": {
     "scrolled": true
    },
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ce152ca",
+   "id": "3722121b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d578b358",
+   "id": "4c7aa6b0",
    "metadata": {},
    "source": [
     "mml(\"$xmlinfo('text', 'sample') $tempo(150) cdef\").music21().write('musicxml', '/tmp/a.xml')"
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fb8ce09",
+   "id": "927e46fa",
    "metadata": {
     "scrolled": true
    },
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121f1b2d",
+   "id": "2119d1ce",
    "metadata": {
     "scrolled": false
    },
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10337750",
+   "id": "06388b7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,38 +455,38 @@
     "parts = s.getElementsByClass(music21.stream.Part)\n",
     "# (parts[0].getElementsByClass(music21.stream.Measure))[39][9].getContextByClass(music21.stream.Measure)\n",
     "# parts[0].flat.getElementsByOffset(160)[0].measureNumber # getContextByClass(music21.stream.Measure)\n",
-    "Score.frommusic21(s).music21().show()"
+    "Score.from_music21(s).music21().show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6272385",
+   "id": "3513b3f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "s = music21.corpus.parse('haydn/opus74no1/movement1.mxl')\n",
     "parts = s.getElementsByClass(music21.stream.Part)\n",
     "# parts[0].show()\n",
-    "Score.frommusic21(parts)[1].music21().show()"
+    "Score.from_music21(parts)[1].music21().show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec4b4aaf",
+   "id": "b8855155",
    "metadata": {},
    "outputs": [],
    "source": [
     "s = music21.corpus.parse(music21.corpus.getComposer('chopin')[0])\n",
     "# s.show()\n",
-    "Score.frommusic21(s).music21().show()"
+    "Score.from_music21(s).music21().show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93659664",
+   "id": "71a8ac24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "e9abd14b",
+   "id": "ac16b612",
    "metadata": {},
    "source": [
     "readsmf('tests/scores/mozart.mid').Reject('n<F4').music21().show()"
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "f5c06b49",
+   "id": "088a3df6",
    "metadata": {
     "scrolled": true
    },
